feat: Add 5 new features - Map Locking, Frame Locking, Enhanced Bone Meal, Anvil Repair, Name Tag Removal + Custom Crafts + Player Poses improvements